--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.igla.tensorflow_easy'
-version '0.0.1'
+version '0.0.2'
 
 allprojects {
     repositories {
@@ -10,6 +10,7 @@ allprojects {
 }
 
 buildscript {
+    ext.kotlin_version = '1.4.10'
     repositories {
         google()
         jcenter()
@@ -17,7 +18,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'de.undercouch:gradle-download-task:3.4.3'
         classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
