--- a/tensorflow/build.gradle
+++ b/tensorflow/build.gradle
@@ -10,7 +10,7 @@ ext {
     groupId = 'com.igla.tensorflow_easy'
     libraryName = 'Easy-TensorFlow'
     artifact = 'easy-tensorflow'
-    libraryVersion = '0.1'
+    libraryVersion = '0.2'
     libraryDescription = 'Java library to simplify work with TensorFlow'
 
     siteUrl = 'https://github.com/iglaweb/Easy-TensorFlow'
@@ -28,7 +28,7 @@ dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     testCompile group: 'junit', name: 'junit', version: '4.12'
     api 'org.jetbrains:annotations:16.0.2'
-    api "org.jetbrains.kotlin:kotlin-stdlib:1.3.72"
+    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
 tasks.withType(JavaCompile) {
